force-app/main/default/objects/ARF_Payment_Prediction__c/ARF_Payment_Prediction__c.object-meta.xml
<CustomObject>
    <label>Payment Prediction</label>
    <nameField><label>Prediction Number</label><displayFormat>PP-{0000}</displayFormat><type>AutoNumber</type></nameField>
    <pluralLabel>Payment Predictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>