force-app/main/default/objects/ARF_Payment_Prediction__c/fields/Accuracy_Days__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Days__c</fullName>
    <label>Accuracy Days</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>