force-app/main/default/objects/ARF_Payment_Prediction__c/fields/Actual_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pay_Date__c</fullName>
    <label>Actual Pay Date</label>
    <type>Date</type>
</CustomField>