force-app/main/default/objects/ARF_Payment_Prediction__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>