force-app/main/default/objects/ARF_Payment_Prediction__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <referenceTo>ARF_Invoice__c</referenceTo>
    <relationshipName>Payment_Predictions</relationshipName>
    <relationshipLabel>Payment Predictions</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>