force-app/main/default/objects/ARF_Payment_Prediction__c/fields/Predicted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Amount__c</fullName>
    <label>Predicted Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>