force-app/main/default/objects/ARF_Payment_Prediction__c/fields/Predicted_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Pay_Date__c</fullName>
    <label>Predicted Pay Date</label>
    <type>Date</type>
</CustomField>