force-app/main/default/objects/ARF_Payment_Prediction__c/fields/Prediction_Method__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Method__c</fullName>
    <label>Prediction Method</label>
    <type>Text</type>
    <length>255</length>
</CustomField>