force-app/main/default/objects/ARF_Payment_Prediction__c/fields/Week_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Week_Bucket__c</fullName>
    <label>Week Bucket</label>
    <type>Text</type>
    <length>50</length>
</CustomField>